# bioinf-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Generator.h  Greedy.h  Oligonucleotide.h  Spectrum.h
src/: Generator.cpp  Greedy.cpp  Oligonucleotide.cpp  Spectrum.cpp
